--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Finchley.M9</spring-cloud.version>
+		<spring-security.version>5.1.0.BUILD-SNAPSHOT</spring-security.version>
 	</properties>
 
 	<dependencies>
@@ -32,6 +33,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.projectreactor</groupId> -->
+<!-- 			<artifactId>reactor-bus</artifactId> -->
+<!-- 			<version>2.0.8.RELEASE</version> -->
+<!-- 		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
